cmake_minimum_required(VERSION 3.25)
project(repo C)

set(CMAKE_C_STANDARD 11)

add_executable(repo
        main.c niveaux/niveau1.h niveaux/niveau2.h require/affichage.h require/verif.h require/jeu.h niveaux/niveau3.h niveaux/niveau4.h niveaux/niveau5.h niveaux/niveau6.h niveaux/niveau7.h niveaux/niveau8.h niveaux/niveau9.h niveaux/niveau10.h niveaux/niveau11.h niveaux/niveau12.h niveaux/niveau13.h niveaux/niveau14.h niveaux/niveau15.h niveaux/niveau16.h niveaux/niveau17.h niveaux/niveau18.h niveaux/niveau19.h niveaux/niveau20.h niveaux/niveau21.h niveaux/niveau22.h niveaux/niveau23.h niveaux/niveau24.h niveaux/niveau25.h niveaux/niveau26.h niveaux/niveau27.h)
